// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HTTPOptions /> renders HTTPCheckboxLabel correctly 1`] = `
<span>
  Enable
   
  <a
    href="https://www.virtool.ca/docs/api/"
    rel="noopener noreferrer"
    target="_blank"
  >
    API
  </a>
</span>
`;

exports[`<HTTPOptions /> renders HTTPFooter correctly 1`] = `
<small
  className="text-warning"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="exclamation-triangle"
    pullRight={false}
  />
   Changes to these settings will only take effect when the server is reloaded.
</small>
`;

exports[`<HTTPOptions /> renders HTTPOptions correctly 1`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <InputError
        autoComplete={false}
        initialValue="foo"
        label="Host"
        noMargin={true}
        onSave={[MockFunction]}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        initialValue="1"
        label="Port"
        noMargin={true}
        onSave={[MockFunction]}
        type="number"
        withButton={true}
      />
      <Checkbox
        checked={false}
        label={<HTTPCheckboxLabel />}
        onClick={[Function]}
        partial={false}
        pullRight={false}
      />
    </PanelBody>
  }
  description="Change the address and port the the web server listens on."
  footerComponent={<HTTPFooter />}
  title="HTTP Server"
/>
`;

exports[`<HTTPOptions /> renders correctly 1`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <InputError
        autoComplete={false}
        initialValue="foo"
        label="Host"
        noMargin={true}
        onSave={[Function]}
        withButton={true}
      />
      <InputError
        autoComplete={false}
        initialValue="1"
        label="Port"
        noMargin={true}
        onSave={[Function]}
        type="number"
        withButton={true}
      />
      <Checkbox
        checked={true}
        label={<HTTPCheckboxLabel />}
        onClick={[Function]}
        partial={false}
        pullRight={false}
      />
    </PanelBody>
  }
  description="Change the address and port the the web server listens on."
  footerComponent={<HTTPFooter />}
  title="HTTP Server"
/>
`;
